[package]
name = "rusty-restaurant"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "api"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"


[dev-dependencies]
reqwest = { version = "0.11.18", features = ["json"] }
